fixed overflow bug

--- a/src/pages/HomePage/HeroSection/HeroSection.css
+++ b/src/pages/HomePage/HeroSection/HeroSection.css
@@ -34,12 +34,18 @@
     max-width: 450px;
     aspect-ratio: 1/1.2;
     flex-shrink: 0;
-    background-image: url('../../../assets/heroImage.jpg');
-    background-position: center;
-    background-size: cover;
-    background-color: transparent;
     border-radius: 30px;
     box-shadow: 0 0 30px 1px rgba(0,0,0,0.4);
+    overflow: hidden;
+}
+#hero-right .lazy-load-image-background{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+#hero-right .lazy-load-image-background img{
+   width: 100%;
+   height: 110%;
 }
 @media screen and (max-width: 1030px) {
     #hero-right{
